# LieGroupRoboticsControl

./: CMakeLists.txt  Config.cmake.in  README.md
include/: LR_Control.h  LR_Trajectory.h  liegroup_robotics.h  pinocchio_header.h  type.h  type_template.h.in
src/: LR_Control.cpp  LR_Trajectory.cpp  liegroup_robotics.cpp
